<resources>
    <string name="app_name">KeWarung</string>
    <string name="home">Home</string>
    <string name="kasir">KASIR</string>
    <string name="kelola">KELOLA BARANG</string>
    <string name="laporan">LAPORAN</string>
    <string name="register">Register</string>
    <string name="buatakun">Buat Akun KeWarung</string>
    <string name="namatoko">Nama Toko</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpass">Konfirmasi Password</string>
    <string name="punyaakun">Sudah Punya Akun?</string>
    <string name="sudah">Sudah</string>
    <string name="profil">Profil</string>
    <string name="update">Update Foto</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="rp">RP</string>
    <string name="total">Total</string>
    <string name="belanja">Belanja</string>
    <string name="kembalian">Kembalian</string>
    <string name="bayar">Bayar</string>
    <string name="caribarang">CARI BARANG</string>
    <string name="namabarang">Nama Barang</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="jumlah">0</string>
    <string name="rekomendasi">Rekomendasi Stok</string>
    <string name="penjualan">Total Penjualan</string>
    <string name="detail">Detail</string>
    <string name="detaillaporan">DETAIL LAPORAN</string>
    <string name="download">Download</string>
    <string name="kelolaa">Kelola</string>
    <string name="stoksekarang">Stok Sekarang :</string>
    <string name="hargabarang">Harga Barang</string>
    <string name="tambahstok">Tambah Stok</string>
    <string name="simpan">SIMPAN</string>
    <string name="tambahBarang">TAMBAH BARANG</string>
    <string name="uploudFoto">UPLOUD FOTO</string>
      <string name="kasir">Kasir</string>
    <string name="kelola">Kelola Barang</string>
    <string name="laporan">Laporan</string>
    <string name="profile_image">Profile Image</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="kewarung_kelola_warung">KeWarung : Kelola Warung</string>
    <string name="email">email</string>
    <string name="format_email">example@email.com</string>
    <string name="password">Password</string>
    <string name="passwaord">passwaord</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="belum">Belum</string>
</resources>