<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <View
        android:id="@+id/_bg__home"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/_bg__home_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textStyle="bold"
        android:layout_width="46dp"
        android:layout_height="19dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/profil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/account_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namatoko"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="290dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/updateFoto"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/update"
        android:textStyle="bold"
        android:background="@drawable/button_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>