<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailLaporanActivity">

    <View
        android:id="@+id/_bg__home"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/_bg__home_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/detaillaporan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/barang"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@+id/_bg__home"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/kolom1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/penjualan"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/button_shape2"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="98dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_download"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/download"
        android:textStyle="bold"
        android:background="@drawable/button_shape2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>