<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity">

    <View
        android:id="@+id/_bg__home"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/_bg__home_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textStyle="bold"
        android:layout_width="46dp"
        android:layout_height="19dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/btn_profile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kasir"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:text="@string/kasir"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="190dp"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/kelola"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:text="@string/kelola"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kasir"
        />

    <Button
        android:id="@+id/laporan"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:text="@string/laporan"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kelola"
        />

</androidx.constraintlayout.widget.ConstraintLayout>